<resources>
    <string name="app_name">Workshop</string>
    <string name="Register">Register </string>
    <string name="forget_password">Forget Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="login">Login</string>
</resources>