<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_marginTop="100dp"
        android:text="@string/Register"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:textSize="40dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_weight="1"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_weight="1"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/cpassword"
        android:hint="@string/confirm_password"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_weight="1"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="150dp"
        android:layout_weight="1"
        android:text="@string/Register" />
</LinearLayout>